--- a/AuctionHouse/AuctionHouse.csproj
+++ b/AuctionHouse/AuctionHouse.csproj
@@ -7,4 +7,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
 </Project>
